--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes sinusoidalScale {
+  0%,
+  100% {
+    transform: translateY(-2px);
+  }
+  50% {
+    transform: translateY(2px);
+  }
+}
+
+.sinusoidal-animation {
+  animation: sinusoidalScale 2s ease-in-out infinite;
+}
